--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -22,7 +22,7 @@
         <!-- Scripts -->
         <?php echo $this->headScript()
                 ->prependFile($this->basePath('/assets/bower_components/bootstrap/dist/js/bootstrap.min.js'))
-                ->prependFile($this->basePath('/assets/bower_components/jquery/dist/jquery.min.js'))
+                ->prependFile($this->basePath('/assets/bower_components/jquery/jquery.min.js'))
                 ->appendFile($this->basePath('/assets/js/respond.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',))
                 ->appendFile($this->basePath('/assets/js/html5shiv.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',)) . PHP_EOL;
         ?>
@@ -32,7 +32,7 @@
             <header>
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <img src="<?php echo $this->basePath('/assets/images/logo_awp.jpg');?>">
+                        <img src="<?php echo $this->basePath('/assets/images/banner.jpg');?>">
                     </div>
                 </div>
             </header>
@@ -45,7 +45,6 @@
 <?php echo $this->content; ?>
 
 <!-- END CONTENT -->
-
                     </div>
                 </div>
             </section>
@@ -67,15 +66,5 @@
 
         </div>
         <?php echo $this->inlineScript() ?>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-70879037-2', 'auto');
-            ga('send', 'pageview');
-
-        </script>
     </body>
 </html>
