ajustes p/ adicionar o campo "n. de assistência"

--- a/module/Application/view/application/message/show.phtml
+++ b/module/Application/view/application/message/show.phtml
@@ -37,7 +37,9 @@
                 </div>
 
                 <hr size="1">
-
+                <strong>N. da Assistência:</strong> <br />
+                <?php echo $entity->getAttendanceNumber() . PHP_EOL;?>
+                <hr size="1">
                 <p>
                     <?php echo $entity->getDescription() . PHP_EOL;?>
                 </p>
