--- a/module/Application/view/application/message/show.phtml
+++ b/module/Application/view/application/message/show.phtml
@@ -41,7 +41,7 @@
                 <?php echo $entity->getAttendanceNumber() . PHP_EOL;?>
                 <hr size="1">
                 <p>
-                    <?php echo $entity->getDescription() . PHP_EOL;?>
+                    <?php echo nl2br($entity->getDescription()) . PHP_EOL;?>
                 </p>
 
                 <hr size="1">
